<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PartyCast alpha</string>

    <string name="words">
    Casa,Mongolfiera,Nuvola,Trofeo,Cane,Gatto,Topo,Elefante,Leone,Tigre,Zebra,Cavalluccio Marino,Mouse,Soldi,
    Telefono,Bottiglia,Estate,Autunno,Inverno,Letto,Lavoro,Amici,Amore,Paura,Rabbia,Gioia,Tristezza,Primavera,
        Occhiali,Pantalone,Maglia,Mutande,Calzino,Televisione,Gomma,Matita,Sole,Luna,Gelato,Pizza,Panino,Kraken,
        Gondola,Venezia,Roma,Milano,Pesce,Delfino,Teatro
    </string>

    <!-- testi per le spiegazioni dei minigiochi -->
    <string name="Descrizione">
        PartyCast &#232; un gioco multigiocatore per smartphone Android che richiede dispositivi Google Cast per funzionare.
        \nIl gioco funziona dai 2 ai 4 giocatori ed &#232; adatto a tutte le et&#225; in quanto semplice e intuitivo.
        \nIl gioco si sviluppa in una collezione di minigiochi, dove lo smartphone &#232; il proprio controller, in cui sfidare gli altri per far accrescere il proprio punteggio.
        \nOgni minigioco ha una durata limite preimpostata.
    </string>
    <string name="titleMinigame1">Artisti e Indovini</string>
    <string name="titleMinigame2">Shake</string>
    <string name="titleMinigame3">Cerca e Raggiungi</string>
    <string name="minigame1">
        In questo minigioco i giocatori potranno avere due ruoli: Artisti e Indovini. A rotazione, un singolo giocatore sar&#225;
        l\'artista mentre gli altri saranno gli indovini.
        \nL\'artista tramite i 3 colori disponibili e la sua immaginazione deve disegnare all\'interno dell\'area designata la parola che gli viene indicata.
        \nL\'indovino dovr&#225; dunque riuscire a capire il disegno dell\'artista e scegliere la risposta corretta tra le opzioni fornite.
        \nIl disegno dell\'artista &#232; sempre visibile sulla TV con il dispositivo Cast.
        \nQuando tutti gli indovini avranno dato una risposta verr&#225; assegnato un nuovo artista.
    </string>
    <string name="minigame2">
        In questo minigioco non dovrete far altro che scuotere il telefono quando il vostro nome apparir&#225; sulla TV.
        \nSe muoverai il telefono quando il tuo nome non &#232; presente perderai punti, dunque stai attento!
        \nChe vinca lo shaker migliore!
    </string>
    <string name="minigame3_pt1">
        In questo minigioco utilizzerete il vostro smartphone come volante, mentre l\'arena &#232; la vostra TV.
        \nPiloterete il vostro personaggio verso le zone a voi designate.
        \nSi colorer&#225; infatti lo schermo del vostro smartphone del colore che vi &#232; stato assegnato.
        \nMa come guiderete il vostro personaggio?
        \nPrima di tutto dovrete impugnare il telefono in modo da leggere il contenuto dello schermo.
        \nL\'immagine sottostante rappresenta dunque il movimento da fare per far salire/scendere il personaggio:
    </string>
    <string name="minigame3_pt2">
        Ma non basta, bisogna anche andare a destra e sinistra.
        \nL\'immagine qua sotto vi mostrer&#225; come:
    </string>
    <string name="minigame3_pt3">
        Potrete anche combinare i movimenti per muovere il vostro personaggio in diagonale.
        \nE ricordate, pi&#249; aree raggiungerete pi&#249; punti prenderete!
    </string>
    <string name="welcomeString">Benvenuti!</string>
    <string name="startBtnString">Start!</string>
</resources>
