<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/testo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:textSize="17dp"
        android:text="@string/minigame3_pt1"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="166dp"
        android:layout_height="166dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/inclinazione"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testo"
        app:srcCompat="@drawable/inclinazione" />

    <TextView
        android:id="@+id/testo_pt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"

        android:layout_marginTop="8dp"
        android:text="@string/minigame3_pt2"
        android:textSize="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image1"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="166dp"
        android:layout_height="166dp"
        app:srcCompat="@drawable/rotazione"
        android:src="@drawable/rotazione"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/testo_pt2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/testo_pt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"

        android:layout_marginTop="8dp"
        android:text="@string/minigame3_pt3"
        android:textSize="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image2"
        app:layout_constraintHorizontal_bias="0.502" />

</android.support.constraint.ConstraintLayout>